# Clases_Python

./: .gitignore  lab1.py
lab2/: parteC.md
lab2/parteA/: cadenas.py  main.py
lab2/parteB/: app.py
lab2/parteB/package/: __init__.py  fechas.py  numeros.py
lab3/: main.py  pyproject.toml  requirements-lock.txt  requirements.txt
lab3/src/: operaciones.py
lab3/tests/: test_operaciones.py
